--- a/style.css
+++ b/style.css
@@ -1,13 +1,55 @@
-table,tr,th,td{
-    border: 1px solid blueviolet;
-    border-collapse: collapse;
-    margin-left: 70px;
-    margin-top :20px;
-}
+html, body {
+    height: 100%;
+    width: 100%;
+  }table,tr,th,td{
+      border: 1px solid blueviolet;
+      border-collapse: collapse;
+      margin-left: 50px;
+      margin-top :20px;
+  }
+      
+  .squars{
+    display:grid;
+    /*grid-gap: 4px;*/
+    justify-content: center;
+     
+    width: 600px;
+    height:150px;
     
-h3{
-    height: 30px;
-    background-color: aqua;
-}
-
+    background-color:aquamarine; 
+    border:1px solid beige;
+   /* margin: 20px;*/
     
+    
+  
+    grid-template-columns: 100px 100px 100px;
+    grid-auto-rows: 100px;
+    grid-template-areas: "a b c";
+    align-content: center;
+      }
+  .box{
+      display:grid;
+    text-align:center;
+    align-content: center;
+    
+    margin: 4px;
+   ;
+  }
+  .submit{
+    position: relative;
+    margin-left: 20px;
+  }
+  
+  .a{
+     background-color: #1363DF;
+    grid-area: a;
+  }
+  .b{
+    background-color: #1363DF;
+    grid-area: b;
+  }
+  .c{
+    background-color: #1363DF;
+    grid-area: c;
+  }
+      
